# conapesca-db-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  healthcheck.py  pyproject.toml  run_stdio.py
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/scripts/: sync_skills.sh
.github/workflows/: deploy.yml
mcp_server/: __main__.py  config.py  db.py  prompts.py  schema.py  security.py  server.py
scripts/: deploy.sh  install_skills.sh  load_dev_data.py
skills/: README.md  registry.py
skills/conapesca-cpue/: SKILL.md
skills/conapesca-temporal-trends/: SKILL.md
skills/contracts/: conapesca_temporal_trends.schema.json
tools/: data_access.py  reporting.py
