[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "conapesca-db-mcp"
version = "0.1.0"
description = "MCP server for querying the CONAPESCA Pacific landings database (2001-2026)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "tools*"]
